Progress was made.

--- a/L4NdoStreamService/src/index.html
+++ b/L4NdoStreamService/src/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <video id="video" playsinline autoplay muted></video>
+    <button id="button" disabled>Request video</button>
 </body>
 </html>
