--- a/L4NdoStreamService/wwwroot/index.html
+++ b/L4NdoStreamService/wwwroot/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>L4Ndo-Stream</title>
-<link href="/css/main.13ae4fce18ee80cae921.css" rel="stylesheet"></head>
+<link href="/css/main.20837d068dd7ef53baed.css" rel="stylesheet"></head>
 <body>
     <video id="video" playsinline autoplay muted></video>
-<script type="text/javascript" src="/main.13ae4fce18ee80cae921.js"></script></body>
+    <button id="button" disabled>Request video</button>
+<script type="text/javascript" src="/main.20837d068dd7ef53baed.js"></script></body>
 </html>
