First Working Prototype

--- a/L4NdoStreamService/src/index.html
+++ b/L4NdoStreamService/src/index.html
@@ -5,7 +5,6 @@
     <title>L4Ndo-Stream</title>
 </head>
 <body>
-    <video id="video" playsinline autoplay muted></video>
-    <button id="button" disabled>Request video</button>
+    <video id="video" autoplay></video>
 </body>
 </html>
