--- a/L4NdoStreamService/wwwroot/index.html
+++ b/L4NdoStreamService/wwwroot/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>L4Ndo-Stream</title>
-<link href="/css/main.20837d068dd7ef53baed.css" rel="stylesheet"></head>
+<link href="/css/main.93fd50240c404c13d132.css" rel="stylesheet"></head>
 <body>
-    <video id="video" playsinline autoplay muted></video>
-    <button id="button" disabled>Request video</button>
-<script type="text/javascript" src="/main.20837d068dd7ef53baed.js"></script></body>
+    <video id="video" autoplay></video>
+<script type="text/javascript" src="/main.93fd50240c404c13d132.js"></script></body>
 </html>
