--- a/L4NdoStreamService/src/index.html
+++ b/L4NdoStreamService/src/index.html
@@ -1,10 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>L4Ndo-Stream</title>
-</head>
-<body>
-    <video id="video" autoplay></video>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>L4Ndo-Stream</title>
+    </head>
+    <body>
+        <video id="video" autoplay></video>
+        <div style="display:flex;flex-direction: column">
+            <span style="margin: 1em" id="info"></span>
+            <button style="margin: 1em" id="connect">Connect</button>
+            <button style="margin: 1em" id="disconnect">Disconnect</button>
+            <div style="display: flex">
+                <div style="display: flex; margin: 1em">
+                    <input type="text" id="stream" />
+                    <button id="join">Join</button>
+                    <button id="leave">Leave</button>
+                </div>
+                <div style="display: flex;margin: 1em">
+                    <input type="text" id="scale" />
+                    <button id="resolution">Set Resolution</button>
+                </div>
+            </div>
+            <textarea style="margin: 1em; height: 500px" id="output"></textarea>
+        </div>
+    </body>
 </html>
